Additional error message fixing